fix: spacing bug

--- a/sp-files/.sphinx/_static/css/styles.css
+++ b/sp-files/.sphinx/_static/css/styles.css
@@ -6,7 +6,7 @@ button {
   box-sizing: border-box;
 }
 
-p {
+.container p {
   margin: 0;
 }
 
